--- a/index.html
+++ b/index.html
@@ -4,11 +4,48 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <div id="topnav">
-        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
-        <input type="text">
-        <button type="button" class="btn-signIn">Sing in</button>
+        <img id="google-img" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+       <div class="bar">
+            <input class="searchBar" type="text">
+       </div>
+        <div class="btn-right">
+            <svg class="gb_Xe" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg>
+            <button type="button" class="btn-signIn">Sing in</button>  
         </div>
+    </div>
+    <div class="icon-bar"> 
+        <div class="all-more">
+            <span class="material-icons">search</span>
+            All
+            <div>
+                <span class="material-icons">
+                    feed
+                    </span>News
+            </div>
+            <div>
+                <span class="material-icons">
+                    slideshow
+                    </span>Videos
+            </div>
+            <div>
+                <span class="material-icons">
+                    location_on
+                    </span>Maps
+            </div>
+            <div>
+                <span class="material-icons">
+                    local_offer
+                    </span>Shopping
+            </div>
+            <div>
+                <span class="material-icons">
+                    more_vert
+                    </span>More
+            </div>
+        </div>
+    </div>
 </body>
