--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 </head>
 <body>
     <div id="topnav">
-        <img id="google-img" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+        <img id="google-img" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png">
        <div class="bar">
             <input class="searchBar" type="text">
+            <span  id="mic-icon" class="material-icons">
+                mic
+            </span>
+            <span id="search-icon" class="material-icons">
+                search
+            </span>
        </div>
         <div class="btn-right">
             <svg class="gb_Xe" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg>
-            <button type="button" class="btn-signIn">Sing in</button>  
+            <button type="button" class="btn-signIn">Sign in</button>  
         </div>
     </div>
+
     <div class="icon-bar"> 
         <div class="all-more">
             <span class="material-icons">search</span>
@@ -45,6 +52,11 @@
                 <span class="material-icons">
                     more_vert
                     </span>More
+            </div>
+            <div>
+                <span>Settings</span>
+                <span>Tools</span>
+            </div>
             </div>
         </div>
     </div>
