--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     more_vert
                     </span>More
             </div>
-            <div>
+            <div id ="stgs-tools">
                 <span>Settings</span>
                 <span>Tools</span>
             </div>
