--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
     <div id="topnav">
         <img id="google-img" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png">
@@ -53,11 +54,79 @@
                     more_vert
                     </span>More
             </div>
-            <div id ="stgs-tools">
+            <div id="stgs-tools">
                 <span>Settings</span>
                 <span>Tools</span>
             </div>
             </div>
         </div>
     </div>
+    <hr id="line">
+    <div id="result-container">
+        <div>
+            <div>
+                https://victor-if.github.io &gt; <span>google-search-result</span>
+            </div>
+            <div>
+                <a href="#">build this webpage - GitHub Pages</a>
+            </div>
+            <div>
+                <strong>build this webpage.</strong> https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+            </div>
+        </div>
+        <div>
+            <div>
+                https://christine-27.github.io &gt; <span>google-homepage</span>
+            </div>
+            <div>
+                <a href="#">build this webpage - GitHub Pages</a>
+            </div>
+            <div>
+                With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong>. ... days ago, having never done any programming in her life, Jennifer Dewalt built her first webpage.
+            </div>
+        </div>
+    </div>
+    <div id="people-ask-box">
+        <h3>People also ask <span class="material-icons"> more_vert</span></h3>
+        <hr>
+        <p>How can I create my own webpage?</p>
+        <hr>
+        <p>How much does it cost to have someone build your website?</p>
+        <hr>
+        <p>Is it hard to build a website?</p>
+        <hr>
+        <p>How can I create my own website for free?</p>
+        <hr>
+        <p>What is the best program to build a website?</p>
+        <hr>
+        <p>What type of website should I make?</p>
+        <hr>
+    </div>
+    <div id="result-container">
+        <div>
+        <div>
+            https://wwww.websitebuilderexpert.com &gt; <span>building-websi...</span>
+        </div>
+        <div>
+            <a href="#">How to Build a Website 2021 | A Step by Step Beginner's Guide</a>
+        </div>
+        <div>
+            There are two ways to <strong>make</strong> a <strong>website</strong>: with a <strong>website</strong> 
+            builder or with WordPress. Thre's no question about it: <strong>website</strong> builders like Wix, ...
+        </div>
+    </div>
+    <div>
+        <div>
+            https://www.pcmag.com &gt; <span>Web Hosting</span>
+        </div>
+        <div>
+            <a href="#">How to Create a Website | PCMag</a>
+        </div>
+        <div>
+            You can use an online service to create web pages, or <strong>build</strong> it offline using a desktop software tool.
+             Or, if you're a coding dynamo, use a plain text editor to create a ...
+        </div>
+        </div>
+    </div>
+    
 </body>
