--- a/index.html
+++ b/index.html
@@ -27,30 +27,32 @@
 
     <div class="icon-bar"> 
         <div class="all-more">
-            <span class="material-icons">search</span>
-            All
             <div>
-                <span class="material-icons">
+            <span class="material-icons icons">search</span>
+            All
+            </div>
+            <div>
+                <span class="material-icons icons">
                     feed
                     </span>News
             </div>
             <div>
-                <span class="material-icons">
+                <span class="material-icons icons">
                     slideshow
                     </span>Videos
             </div>
             <div>
-                <span class="material-icons">
+                <span class="material-icons icons">
                     location_on
                     </span>Maps
             </div>
             <div>
-                <span class="material-icons">
+                <span class="material-icons icons">
                     local_offer
                     </span>Shopping
             </div>
             <div>
-                <span class="material-icons">
+                <span class="material-icons icons">
                     more_vert
                     </span>More
             </div>
