wok on result box

--- a/index.html
+++ b/index.html
@@ -152,7 +152,31 @@
                 You can use an online service to create web pages, or <strong>build</strong> it offline using a desktop software tool.
                  Or, if you're a coding dynamo, use a plain text editor to create a ...
             </div>
+        </div>
+        <div>
+            <div>
+                https://wwww.websitebuilderexpert.com &gt; <span>building-websi...</span>
             </div>
+            <div>
+                <a href="#">How to Build a Website 2021 | A Step by Step Beginner's Guide</a>
+            </div>
+            <div>
+                There are two ways to <strong>make</strong> a <strong>website</strong>: with a <strong>website</strong> 
+                builder or with WordPress. Thre's no question about it: <strong>website</strong> builders like Wix, ...
+            </div>
+        </div>
+        <div>
+            <div>
+                https://www.pcmag.com &gt; <span>Web Hosting</span>
+            </div>
+            <div>
+                <a href="#">How to Create a Website | PCMag</a>
+            </div>
+            <div>
+                You can use an online service to create web pages, or <strong>build</strong> it offline using a desktop software tool.
+                 Or, if you're a coding dynamo, use a plain text editor to create a ...
+            </div>
+        </div>
     </div>
     
 </body>
