--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </div>
         </div>
     </div>
+
     <div id="people-ask-box">
         <h3>People also ask <span class="material-icons"> more_vert</span></h3>
         <hr>
@@ -124,6 +125,7 @@
         </p>
         <hr>
     </div>
+
     <div id="result-container">
         <div class="box">
             <div>
@@ -198,5 +200,15 @@
             </div>
         </div>     
     </div>
-    
+    <footer id="footer">
+        <p id="ft-address">
+            <strong>Albany Park, Chicago, Il</strong> <span>- From your internet address- Use precise location - Learn more</span>
+        </p>
+        <div id="ft-nav">
+            <a href="#">Help</a>
+            <a href="#">Send feedback</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+        </div>
+    </footer>
 </body>
